--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "archiver": "^7.0.1",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "heic2any": "^0.0.4",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
